welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:40: error: reassignment to val
     case _ => finie=true			  
                    ^